# ChangeLog for sci-biology/embassy-signature
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-signature/ChangeLog,v 1.12 2007/02/16 21:45:59 je_fro Exp $

  16 Feb 2007; Jeff Gardner <je_fro@gentoo.org>
  embassy-signature-0.1.0-r1.ebuild:
  Added ~amd64.

  10 Dec 2006; Olivier Fisette <ribosome@gentoo.org>
  -embassy-signature-0.1.0.ebuild:
  Pruning old version.

  03 Nov 2006; nixnut <nixnut@gentoo.org> embassy-signature-0.1.0-r1.ebuild:
  Stable on ppc wrt bug 153766

  03 Nov 2006; Jeff Gardner <je_fro@gentoo.org>
  embassy-signature-0.1.0-r1.ebuild:
  Added ~sparc

  02 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  embassy-signature-0.1.0.ebuild, embassy-signature-0.1.0-r1.ebuild:
  Dropped ppc-macos, see you in prefix.

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org>
  embassy-signature-0.1.0-r1.ebuild:
  Added to x86.

*embassy-signature-0.1.0-r1 (21 Jul 2006)

  21 Jul 2006; Olivier Fisette <ribosome@gentoo.org>
  +embassy-signature-0.1.0-r1.ebuild:
  New upstream version building against EMBOSS 4.0.0.

  21 Jul 2006; Olivier Fisette <ribosome@gentoo.org>
  embassy-signature-0.1.0.ebuild:
  Fixed download URL (silent upstream repackaging).

  03 Oct 2005; Olivier Fisette <ribosome@gentoo.org>
  embassy-signature-0.1.0.ebuild:
  Stable on ppc-macos (with j4rg0n's permission, bug #102420).

  02 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  embassy-signature-0.1.0.ebuild:
  Stable on ppc.

  21 Sep 2005; Olivier Fisette <ribosome@gentoo.org>
  embassy-signature-0.1.0.ebuild:
  Added to x86.

*embassy-signature-0.1.0 (07 Aug 2005)

  07 Aug 2005; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +embassy-signature-0.1.0.ebuild:
  New import. This package is part of the EMBASSY 3.0.0 distribution.
