@@ -1,0 +1,6 @@
+MD5 be4c895220ad34afd65d450ba7d8e34b EMBOSS-5.0.0.tar.gz 20666560
+RMD160 1bf510c0919d991e4ba67182137448dee49bab4d EMBOSS-5.0.0.tar.gz 20666560
+SHA256 64e6f09b82a719ff26de7f21fdf7d2bd605d2c664384c1c7b48f9d245d5f40ae EMBOSS-5.0.0.tar.gz 20666560
+MD5 26deae308cc5aac3dee5dd03df2ae9e8 embassy-5.0.0-signature-0.1.0.tar.gz 573992
+RMD160 cec1e7332b158bde4ba2fd8a616fe41383628e03 embassy-5.0.0-signature-0.1.0.tar.gz 573992
+SHA256 9b0529befdbe5d56b3370cfffe0a4b4cc523f350b50ddd4a61dd24776a1770e8 embassy-5.0.0-signature-0.1.0.tar.gz 573992
