@@ -1,0 +1,6 @@
+MD5 be4c895220ad34afd65d450ba7d8e34b EMBOSS-5.0.0.tar.gz 20666560
+RMD160 1bf510c0919d991e4ba67182137448dee49bab4d EMBOSS-5.0.0.tar.gz 20666560
+SHA256 64e6f09b82a719ff26de7f21fdf7d2bd605d2c664384c1c7b48f9d245d5f40ae EMBOSS-5.0.0.tar.gz 20666560
+MD5 6736b4741b15d4cba488a5422fcfaee1 embassy-5.0.0-structure-0.1.0.tar.gz 530874
+RMD160 eb2301ede2133b59d0ed61698c727ce7a2f72c14 embassy-5.0.0-structure-0.1.0.tar.gz 530874
+SHA256 3ed8ea5373232cd80302ff3b8727838b4de2f6b39aa263ab9530bbbe71d730c1 embassy-5.0.0-structure-0.1.0.tar.gz 530874
