@@ -1,0 +1,13 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-topo/embassy-topo-1.0.0-r4.ebuild,v 1.1 2007/07/18 01:56:22 ribosome Exp $
+
+EBOV="5.0.0"
+
+inherit embassy
+
+DESCRIPTION="EMBOSS integrated version of TOPO - Transmembrane protein display"
+SRC_URI="ftp://emboss.open-bio.org/pub/EMBOSS/EMBOSS-${EBOV}.tar.gz
+	mirror://gentoo/embassy-${EBOV}-${PN:8}-${PV}.tar.gz"
+
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
