@@ -1,0 +1,6 @@
+MD5 be4c895220ad34afd65d450ba7d8e34b EMBOSS-5.0.0.tar.gz 20666560
+RMD160 1bf510c0919d991e4ba67182137448dee49bab4d EMBOSS-5.0.0.tar.gz 20666560
+SHA256 64e6f09b82a719ff26de7f21fdf7d2bd605d2c664384c1c7b48f9d245d5f40ae EMBOSS-5.0.0.tar.gz 20666560
+MD5 d45602a1b1f22da50a775c41df5fe672 embassy-5.0.0-topo-1.0.0.tar.gz 379381
+RMD160 4dc947ee33b0f5312e73634ad43888e9ac57aede embassy-5.0.0-topo-1.0.0.tar.gz 379381
+SHA256 ed1921e92d1bbd9fcc16ab36f2fcbafca9e60cc0d4b4fd1da77660ffd3e7b2f2 embassy-5.0.0-topo-1.0.0.tar.gz 379381
