@@ -1,0 +1,17 @@
+DIST EMBOSS-5.0.0.tar.gz 20666560 RMD160 1bf510c0919d991e4ba67182137448dee49bab4d SHA1 1ad4edc4808a8225fe8d574e8a7d0686be99cac6 SHA256 64e6f09b82a719ff26de7f21fdf7d2bd605d2c664384c1c7b48f9d245d5f40ae
+DIST embassy-5.0.0-vienna-1.6.tar.gz 635638 RMD160 07e87ae645d54eedf401ecaaa78bd9fed1845047 SHA1 2fd8bb1cb27235651fc7a41aacd97db287781f99 SHA256 04c4a57486e23c2cc8ef396d9012c396519b2ab1b13b2500199e6457a34cfa58
+EBUILD embassy-vienna-1.6.ebuild 479 RMD160 8180b47b69b09694e02b2e5e5ff9960528e0b7f5 SHA1 bc4477b48109bdc4ab1bd8b19b13317e33522170 SHA256 13926feb9c479d0cfd4713154f5027bfa36e49f81550ce0dcf464cabc2626fd8
+MD5 e354ff0137fe1e3e798144a342078c32 embassy-vienna-1.6.ebuild 479
+RMD160 8180b47b69b09694e02b2e5e5ff9960528e0b7f5 embassy-vienna-1.6.ebuild 479
+SHA256 13926feb9c479d0cfd4713154f5027bfa36e49f81550ce0dcf464cabc2626fd8 embassy-vienna-1.6.ebuild 479
+MISC ChangeLog 364 RMD160 9b7ecbb28e7ab9d426e34cac57777d76f7fcbf36 SHA1 7331fc85d22515e3a1efef1e40b963df978d111c SHA256 742de8c6f8b18e31059809de4a8f8746af16099f97e105f2fb7c31be789cb987
+MD5 785414a3c6fc55b58c105724203e334f ChangeLog 364
+RMD160 9b7ecbb28e7ab9d426e34cac57777d76f7fcbf36 ChangeLog 364
+SHA256 742de8c6f8b18e31059809de4a8f8746af16099f97e105f2fb7c31be789cb987 ChangeLog 364
+MISC metadata.xml 262 RMD160 4eabcbcb990d4d5e3b34db8c27bcd2c0cfcf7501 SHA1 3c024ca60a2b93ed0e0311f6b05ef5ef117bee31 SHA256 89af818a993faf14a4a87e2f254943420156c2a317c385480a9533ba682b650f
+MD5 5f35ae4b4cb1cd144db7c7c093d3fd80 metadata.xml 262
+RMD160 4eabcbcb990d4d5e3b34db8c27bcd2c0cfcf7501 metadata.xml 262
+SHA256 89af818a993faf14a4a87e2f254943420156c2a317c385480a9533ba682b650f metadata.xml 262
+MD5 6d077c51c78ba9ba1f2371719ce3a21d files/digest-embassy-vienna-1.6 518
+RMD160 88171e69158bf38407016ebaa97a306b84e6a17f files/digest-embassy-vienna-1.6 518
+SHA256 f965d05aba37e46d85c28579f83967bf8c22caa035c118125a37b12cb629adec files/digest-embassy-vienna-1.6 518
