@@ -1,6 +1,12 @@
 # ChangeLog for sci-biology/embassy-structure
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-structure/ChangeLog,v 1.12 2007/02/15 22:32:13 je_fro Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-structure/ChangeLog,v 1.13 2007/07/18 01:54:57 ribosome Exp $
+
+*embassy-structure-0.1.0-r2 (18 Jul 2007)
+
+  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org>
+  +embassy-structure-0.1.0-r2.ebuild:
+  New upstream packaging for EMBOSS 5.0.0.
 
   15 Feb 2007; Jeff Gardner <je_fro@gentoo.org>
   embassy-structure-0.1.0-r1.ebuild:
