@@ -1,6 +1,12 @@
 # ChangeLog for sci-biology/embassy-topo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-topo/ChangeLog,v 1.22 2007/02/15 19:49:54 je_fro Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-topo/ChangeLog,v 1.23 2007/07/18 01:56:22 ribosome Exp $
+
+*embassy-topo-1.0.0-r4 (18 Jul 2007)
+
+  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org>
+  +embassy-topo-1.0.0-r4.ebuild:
+  New upstream packaging for EMBOSS 5.0.0.
 
   15 Feb 2007; Jeff Gardner <je_fro@gentoo.org>
   embassy-topo-1.0.0-r3.ebuild:
